@@ -3,7 +3,7 @@ NAME
     (based on XML::RPC)
 
 VERSION
-    Version 0.2
+    Version 0.3
 
 SYNOPSIS
     Generic usage
